QPID-6522 : [Java] Remove dependencies on commons-lang, commons-codec